--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,16 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio Files
+Debug
+Release
+*.suo
+*.csproj.user
+*.vbproj.user
+ipch
+*sdf
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+
